final swagger version for release 1.3
